# solar-panel-segmentation

./: .gitignore  README.md  pyproject.toml  pytest.ini  run.py
data/: mount_data_asset.py
solarnet/: run.py
solarnet/datasets/: classifier.py  segmenter.py  segmenter_inference.py
solarnet/models/: train_funcs.py
solarnet/preprocessing/: masks.py  splits.py  utils.py
tests/preprocessing/: test_masks.py
