[project]
name = "solarnet"
version = "0.1.0"
description = ""
authors = [
    { name = "Gabriel Tseng" },
    { name = "Marat Kopytjuk" },
]
requires-python = "~=3.12"
readme = "README.md"
license = "MIT"
dependencies = [
    "torch>=2.6.0,<3",
    "numpy>=2.2.3,<3",
    "pandas>=2.2.3,<3",
    "tqdm>=4.67.1,<5",
    "pillow>=11.1.0,<12",
    "rasterio>=1.4.3,<2",
    "scikit-learn>=1.6.1,<2",
    "fire>=0.7.0,<0.8",
    "matplotlib>=3.10.1,<4",
    "torchvision>=0.21.0,<0.22",
    "ipykernel>=6.29.5,<7",
    "shapely>=2.0.7,<3",
    "pep8>=1.7.1,<2",
    "ipython<9.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5,<9",
    "flake8>=7.1.2,<8",
    "pyqt5>=5.15.11,<6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
